@@ -19,6 +19,7 @@ package org.apache.solr.cloud;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -51,13 +52,14 @@ public class NestedShardedAtomicUpdateTest extends SolrCloudTestCase { // used t
         .addConfig("_default", configset("cloud-minimal"))
         .configure();
     // replace schema.xml with schema-test.xml
-    Path schemaPath = Path.of(TEST_HOME()).resolve("collection1").resolve("conf").resolve("schema-nest.xml");
+    Path schemaPath = Paths.get(TEST_HOME()).resolve("collection1").resolve("conf").resolve("schema-nest.xml");
     cluster.getZkClient().setData("/configs/_default/schema.xml", schemaPath.toFile(),true);
 
     cloudClient = cluster.getSolrClient();
     cloudClient.setDefaultCollection(DEFAULT_COLLECTION);
 
     CollectionAdminRequest.createCollection(DEFAULT_COLLECTION, 4, 1)
+        .setMaxShardsPerNode(4)
         .process(cloudClient);
 
     clients = new ArrayList<>();
